--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==1.0.2
 Flask-Compress==1.4.0
-plotly_express
-dash==0.39.0  # The core dash backend
-dash-html-components==0.14.0  # HTML components
-dash-core-components==0.44.0  # Supercharged components
+plotly==4.1.0
+dash==1.1.1  # The core dash backend
+dash-html-components==1.0.0  # HTML components
+dash-core-components==1.0.0  # Supercharged components
 gunicorn==19.9.0
